Add hidden captcha to thank you pages and login
